tests/ui/traits/negative-bounds/negative-sized.stderr
error[E0277]: the trait bound `(): !Sized` is not satisfied
  --> $DIR/negative-sized.rs:6:11
   |
LL |     foo::<()>();
   |           ^^ the trait bound `(): !Sized` is not satisfied
   |
note: required by a bound in `foo`
  --> $DIR/negative-sized.rs:3:11
   |
LL | fn foo<T: !Sized>() {}
   |           ^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
